--- a/src/app/translations/due-dates-calendar-widget_it.po
+++ b/src/app/translations/due-dates-calendar-widget_it.po
@@ -11,142 +11,142 @@ msgstr ""
 "X-Crowdin-File-ID: 267290\n"
 "Language-Team: Italian\n"
 "Language: it_IT\n"
-"PO-Revision-Date: 2021-07-23 17:54\n"
+"PO-Revision-Date: 2022-05-17 11:03\n"
 
 #: src/app/due_dates_calendar_widget.js:373
 msgid "Can't load information from service."
-msgstr ""
+msgstr "Impossibile caricare informazioni dal servizio."
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:58
 msgid "Cancel"
-msgstr ""
+msgstr "Annulla"
 
 #: src/app/calendar_toolbar.js:44
 msgid "Day"
-msgstr ""
+msgstr "Giorno"
 
 #: src/app/due_dates_calendar_widget.js:97
 msgid "Due Date Calendar Widget"
-msgstr ""
+msgstr "Widget Calendario data di scadenza"
 
 #: src/app/edit-form.js:411
 #: src/app/edit-form.js:49
 msgid "Everything"
-msgstr ""
+msgstr "Qualsiasi"
 
 #: src/app/edit-form.js:532
 msgid "Field used to apply color scheme"
-msgstr ""
+msgstr "Campo utilizzato per applicare la combinazione di colori"
 
 #: src/app/edit-form.js:518
 msgid "Field used to schedule due dates"
-msgstr ""
+msgstr "Campo utilizzato per pianificare le date di scadenza"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:90
 msgid "January|February|March|April|May|June|July|August|September|October|November|December"
-msgstr ""
+msgstr "Gennaio|Febbraio|Marzo|Aprile|Maggio|Giugno|Luglio|Agosto|Settembre|Ottobre|Novembre|Dicembre"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:89
 msgid "Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec"
-msgstr ""
+msgstr "Gen|Feb|Mar|Apr|Mag|Giu|Lug|Ago|Set|Ott|Nov|Dic"
 
 #: src/app/calendar_toolbar.js:49
 msgid "Month"
-msgstr ""
+msgstr "Mese"
 
 #: src/app/due_dates_calendar_widget.js:382
 msgid "No issues corresponding your query, project and schedule field."
-msgstr ""
+msgstr "Nessun ticket corrispondente ai campi query, progetto e pianificazione."
 
 #: src/app/edit-form.js:341
 msgid "No projects"
-msgstr ""
+msgstr "Nessun progetto"
 
 #: src/app/edit-form.js:343
 msgid "No saved searches"
-msgstr ""
+msgstr "Nessuna ricerca salvata"
 
 #: src/app/edit-form.js:342
 msgid "No tags"
-msgstr ""
+msgstr "Nessun tag"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/http-error-handler/http-error-handler.js:4
 msgid "Oops! Something went wrong..."
-msgstr ""
+msgstr "Oops! Qualcosa è andato storto..."
 
 #: src/app/edit-form.js:493
 msgid "Optional title"
-msgstr ""
+msgstr "Titolo facoltativo"
 
 #: src/app/edit-form.js:430
 msgid "Projects"
-msgstr ""
+msgstr "Progetti"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:47
 msgid "Save"
-msgstr ""
+msgstr "Salva"
 
 #: src/app/edit-form.js:442
 msgid "Saved searches"
-msgstr ""
+msgstr "Ricerche salvate"
 
 #: src/app/edit-form.js:517
 msgid "Select an available date type field"
-msgstr ""
+msgstr "Seleziona un campo tipo di data disponibile"
 
 #: src/app/edit-form.js:110
 msgid "Selected YouTrack service is not available"
-msgstr ""
+msgstr "Il servizio YouTrack selezionato non è disponibile"
 
 #: src/app/edit-form.js:496
 msgid "Set optional title"
-msgstr ""
+msgstr "Imposta titolo facoltativo"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:88
 msgid "Sunday|Monday|Tuesday|Wednesday|Thursday|Friday|Saturday"
-msgstr ""
+msgstr "Domenica|Lunedi|Martedi|Mercoledi|Giovedi|Venerdi|Sabato"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:87
 msgid "Sun|Mon|Tue|Wed|Thu|Fri|Sat"
-msgstr ""
+msgstr "Dom|Lun|Mar|Mer|Gio|Ven|Sab"
 
 #: src/app/edit-form.js:436
 msgid "Tags"
-msgstr ""
+msgstr "Tag"
 
 #: src/app/calendar_toolbar.js:32
 msgid "Today"
-msgstr ""
+msgstr "Oggi"
 
 #: src/app/edit-form.js:417
 msgid "Type search query"
-msgstr ""
+msgstr "Digitare la query di ricerca"
 
 #: src/app/calendar_toolbar.js:48
 msgid "Week"
-msgstr ""
+msgstr "Settimana"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:69
 msgid "Widget refreshes every minute"
-msgstr ""
+msgstr "Il widget si aggiorna ogni minuto"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:70
 msgid "Widget refreshes every {{minutesCount}} minutes"
-msgstr ""
+msgstr "Il widget si aggiorna ogni {{minutesCount}} minuti"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:91
 msgid "am|pm"
-msgstr ""
+msgstr "am|pm"
 
 #: src/app/due_dates_calendar_widget.js:77
 msgid "issues"
-msgstr ""
+msgstr "ticket"
 
 #: src/app/due_dates_calendar_widget.js:646
 msgid "more"
-msgstr ""
+msgstr "altro"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:64
 msgid "{{minutesCount}} min"
-msgstr ""
+msgstr "{{minutesCount}} min"
 
