--- a/src/app/translations/due-dates-calendar-widget_ru.po
+++ b/src/app/translations/due-dates-calendar-widget_ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "X-Crowdin-File-ID: 220756\n"
 "Language-Team: Russian\n"
 "Language: ru_RU\n"
-"PO-Revision-Date: 2021-07-23 17:52\n"
+"PO-Revision-Date: 2022-05-18 10:36\n"
 
 #: src/app/due_dates_calendar_widget.js:373
 msgid "Can't load information from service."
@@ -108,7 +108,7 @@ msgstr "воскресенье|понедельник|вторник|среда|
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:87
 msgid "Sun|Mon|Tue|Wed|Thu|Fri|Sat"
-msgstr "вск|пнд|втр|срд|чтв|птн|сбт"
+msgstr "вс|пн|вт|ср|чт|пт|сб"
 
 #: src/app/edit-form.js:436
 msgid "Tags"
