--- a/src/app/translations/due-dates-calendar-widget_zt.po
+++ b/src/app/translations/due-dates-calendar-widget_zt.po
@@ -11,7 +11,7 @@ msgstr ""
 "X-Crowdin-File-ID: 267290\n"
 "Language-Team: Chinese Traditional\n"
 "Language: zh_TW\n"
-"PO-Revision-Date: 2021-07-23 17:53\n"
+"PO-Revision-Date: 2022-05-03 23:53\n"
 
 #: src/app/due_dates_calendar_widget.js:373
 msgid "Can't load information from service."
@@ -76,7 +76,7 @@ msgstr ""
 
 #: src/app/edit-form.js:493
 msgid "Optional title"
-msgstr ""
+msgstr "可選標題"
 
 #: src/app/edit-form.js:430
 msgid "Projects"
@@ -132,7 +132,7 @@ msgstr ""
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:70
 msgid "Widget refreshes every {{minutesCount}} minutes"
-msgstr ""
+msgstr "小工具每 {{minutesCount}} 分鐘重新整理一次"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:91
 msgid "am|pm"
@@ -148,5 +148,5 @@ msgstr ""
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:64
 msgid "{{minutesCount}} min"
-msgstr ""
+msgstr "{{minutesCount}} 分鐘"
 
