--- a/src/app/translations/due-dates-calendar-widget_tr.po
+++ b/src/app/translations/due-dates-calendar-widget_tr.po
@@ -11,140 +11,140 @@ msgstr ""
 "X-Crowdin-File-ID: 267290\n"
 "Language-Team: Turkish\n"
 "Language: tr_TR\n"
-"PO-Revision-Date: 2022-06-29 13:23\n"
+"PO-Revision-Date: 2023-07-19 00:07\n"
 
 #: src/app/due_dates_calendar_widget.js:378
 msgid "Can't load information from service."
-msgstr ""
+msgstr "Hizmetten bilgi yüklenemiyor."
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:58
 msgid "Cancel"
-msgstr ""
+msgstr "İptal"
 
 #: src/app/calendar_toolbar.js:44
 msgid "Day"
-msgstr ""
+msgstr "Gün"
 
 #: src/app/due_dates_calendar_widget.js:97
 msgid "Due Date Calendar Widget"
-msgstr ""
+msgstr "Son Tarih Takvimi Widget'ı"
 
 #: src/app/edit-form.js:411
 #: src/app/edit-form.js:49
 msgid "Everything"
-msgstr ""
+msgstr "Her şey"
 
 #: src/app/edit-form.js:532
 msgid "Field used to apply color scheme"
-msgstr ""
+msgstr "Renk şemasını uygulamak için kullanılan alan"
 
 #: src/app/edit-form.js:518
 msgid "Field used to schedule due dates"
-msgstr ""
+msgstr "Son tarihleri planlamak için kullanılan alan"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:90
 msgid "January|February|March|April|May|June|July|August|September|October|November|December"
-msgstr ""
+msgstr "Ocak|Şubat|Mart|Nisan|Mayıs|Haziran|Temmuz|Ağustos|Eylül|Ekim|Kasım|Aralık"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:89
 msgid "Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec"
-msgstr ""
+msgstr "Oca|Şub|Mar|Nis|May|Haz|Tem|Ağu|Eyl|Eki|Kas|Ara"
 
 #: src/app/calendar_toolbar.js:49
 msgid "Month"
-msgstr ""
+msgstr "Ay"
 
 #: src/app/due_dates_calendar_widget.js:387
 msgid "No issues corresponding your query, project and schedule field."
-msgstr ""
+msgstr "Sorgu, proje ve zamanlama alanınızla ilgili bir sorun yok."
 
 #: src/app/edit-form.js:341
 msgid "No projects"
-msgstr ""
+msgstr "Proje yok"
 
 #: src/app/edit-form.js:343
 msgid "No saved searches"
-msgstr ""
+msgstr "Kayıtlı arama yok"
 
 #: src/app/edit-form.js:342
 msgid "No tags"
-msgstr ""
+msgstr "Etiket yok"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/http-error-handler/http-error-handler.js:4
 msgid "Oops! Something went wrong..."
-msgstr "Hoppala! Bir şeyler ters gitti..."
+msgstr "Hay aksi! Bir şeyler ters gitti..."
 
 #: src/app/edit-form.js:493
 msgid "Optional title"
-msgstr ""
+msgstr "İsteğe bağlı başlık"
 
 #: src/app/edit-form.js:430
 msgid "Projects"
-msgstr ""
+msgstr "Projeler"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:47
 msgid "Save"
-msgstr ""
+msgstr "Kaydet"
 
 #: src/app/edit-form.js:442
 msgid "Saved searches"
-msgstr ""
+msgstr "Kayıtlı aramalar"
 
 #: src/app/edit-form.js:517
 msgid "Select an available date type field"
-msgstr ""
+msgstr "Uygun bir tarih türü alanı seçin"
 
 #: src/app/edit-form.js:110
 msgid "Selected YouTrack service is not available"
-msgstr ""
+msgstr "Seçili YouTrack hizmeti kullanılamıyor"
 
 #: src/app/edit-form.js:496
 msgid "Set optional title"
-msgstr ""
+msgstr "İsteğe bağlı başlığı ayarlayın"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:88
 msgid "Sunday|Monday|Tuesday|Wednesday|Thursday|Friday|Saturday"
-msgstr ""
+msgstr "Pazar|Pazartesi|Salı|Çarşamba|Perşembe|Cuma|Cumartesi"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:87
 msgid "Sun|Mon|Tue|Wed|Thu|Fri|Sat"
-msgstr ""
+msgstr "Paz|Pzt|Sal|Çrş|Prş|Cum|Cmt"
 
 #: src/app/edit-form.js:436
 msgid "Tags"
-msgstr ""
+msgstr "Etiketler"
 
 #: src/app/calendar_toolbar.js:32
 msgid "Today"
-msgstr ""
+msgstr "Bugün"
 
 #: src/app/edit-form.js:417
 msgid "Type search query"
-msgstr ""
+msgstr "Arama sorgusu girin"
 
 #: src/app/calendar_toolbar.js:48
 msgid "Week"
-msgstr ""
+msgstr "Hafta"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:69
 msgid "Widget refreshes every minute"
-msgstr ""
+msgstr "Widget her dakika yenilenir"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:70
 msgid "Widget refreshes every {{minutesCount}} minutes"
-msgstr "Widget {{minutesCount}} dakikada bir yenilenmekte"
+msgstr "Widget {{minutesCount}} dakikada bir yenilenir"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:91
 msgid "am|pm"
-msgstr ""
+msgstr "öö|ös"
 
 #: src/app/due_dates_calendar_widget.js:77
 msgid "issues"
-msgstr ""
+msgstr "sorunlar"
 
 #: src/app/due_dates_calendar_widget.js:654
 msgid "more"
-msgstr ""
+msgstr "daha fazla"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:64
 msgid "{{minutesCount}} min"
